# protoss

./: .gitignore  CONSIDERATIONS.md  LICENSE  README.md  VISION.md  experiments.md  justfile  logbook.md  pyproject.toml  pytest.ini  test_minimal.py  trial.py  trial_by_fire.py
.cogency/: store.db
docs/: ARCHITECTURE.md  CATHEDRAL.md  CLARITY.md  DOCTRINE.md  ROADMAP.md  SAFETY.md  TESTING.md  VISION.md  architecture.md  archon.md  ascension.md  carrier.md  cathedral.md  conclave.md  coordination.md  deliberation.md  doctrine.md  escalation.md  executor.md  interface.md  khala.md  philosophy.md  planning.md  protoss.md  recursive.md  roadmap.md  safety.md  scenario.md  squads.md  stalker.md  taxonomy.md  zealot.md
docs/blueprints/: constitution.md  coordination.md  emergence.md  evolution.md  interface.md  knowledge.md  memory.md  review.md
docs/doctrine/: constitution.md  continuity.md  emergence.md  resolution.md
docs/memes/: claude-cathedral.md
evals/: compare.py  config.py  eval.py  generate.py  runner.py
obs/: __init__.py  metrics.py  timeline.py  topology.py
philosophy/: ax.md  code.md
scripts/: debug_agents.py  debug_cogency.py  test_build_task.py  test_clean_debate.py  test_debate.py  test_full_stack.py  test_minimal.py  test_personas.py
tests/: __init__.py  conftest.py  mocks.py  test_archon_patterns.py  test_carrier.py  test_conclave.py  test_conversation_coordination.py  test_coordination.py  test_gateway.py  test_khala.py  test_natural_coordination.py  test_pylon.py  test_sacred_four.py  test_unit_conclave.py  test_unit_gateway.py  test_unit_khala.py
trials/: __init__.py  runner.py
(+218 files in other folders)
