[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "protoss"
version = "0.1.0"
description = "Constitutional AI coordination through emergent agent swarms."
authors = [{ name = "Tyson Chan", email = "tyson.chan@proton.me" }]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/iteebz/protoss"
repository = "https://github.com/iteebz/protoss"
keywords = ["ai", "agents", "protoss", "coordination", "distributed", "cognition", "autonomous", "multiagent", "starcraft", "psionic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11,<4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.4.1"
pytest-asyncio = "^0.21.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
typer = "^0.17.4"
cogency = {path = "../../public/cogency"}

[tool.poetry]
packages = [{ include = "protoss", from = "src" }]

[tool.poetry.scripts]
protoss = "protoss.cli:app"
pytest = "pytest:main"